save before deleting

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 	"type": "module",
 	"scripts": {
 		"clean": "rm -rf ./dist/*",
-		"start": "node --no-warnings server/dev.js",
-		"dev": "node --no-warnings server/dev.js",
+		"start": "node --no-warnings server/index.js",
+		"dev": "node --no-warnings server/index.js",
 		"lint": "eslint '**/*.{js,jsx,ts,tsx}'",
 		"lint:fix": "eslint --fix '**/*.{js,jsx,ts,tsx}'",
 		"format": "prettier --check . --ignore-path .gitignore !package.json !pnpm-lock.yaml",
