--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@hattip/adapter-node": "^0.0.33",
 		"@hattip/core": "^0.0.33",
 		"@hattip/router": "^0.0.33",
+		"@prisma/client": "4.13.0",
 		"esbuild": "^0.17.14",
 		"react": "18.3.0-next-3706edb81-20230308",
 		"react-dom": "18.3.0-next-3706edb81-20230308",
@@ -38,6 +39,7 @@
 		"eslint-plugin-unicorn": "^46.0.0",
 		"nanoid": "^4.0.2",
 		"prettier": "^2.8.7",
+		"prisma": "4.13.0",
 		"ws": "^8.13.0"
 	}
 }
