--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"esbuild": "^0.17.14",
 		"react": "18.3.0-next-3706edb81-20230308",
 		"react-dom": "18.3.0-next-3706edb81-20230308",
-		"react-server-dom-webpack": "0.0.0-experimental-41b4714f1-20230328"
+		"react-server-dom-webpack": "0.0.0-experimental-41b4714f1-20230328",
+		"styled-components": "^5.3.9"
 	},
 	"devDependencies": {
 		"@types/node": "^18.15.11",
