--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@hattip/core": "^0.0.33",
 		"@hattip/router": "^0.0.33",
 		"@prisma/client": "4.13.0",
+		"disconnect": "^1.2.2",
 		"esbuild": "^0.17.14",
 		"react": "18.3.0-next-3706edb81-20230308",
 		"react-dom": "18.3.0-next-3706edb81-20230308",
