--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"lint": "eslint '**/*.{js,jsx,ts,tsx}'",
 		"lint:fix": "eslint --fix '**/*.{js,jsx,ts,tsx}'",
 		"format": "prettier --check . --ignore-path .gitignore !package.json !pnpm-lock.yaml",
-		"format:fix": "prettier --write . --ignore-path .gitignore !package.json !pnpm-lock.yaml"
+		"format:fix": "prettier --write . --ignore-path .gitignore !package.json !pnpm-lock.yaml",
+		"deploy": "docker buildx build --platform linux/amd64 -t 283564121446.dkr.ecr.us-east-1.amazonaws.com/jenius . && docker push 283564121446.dkr.ecr.us-east-1.amazonaws.com/jenius"
 	},
 	"browserslist": "defaults",
 	"keywords": [],
